Honor Systems generated updates\n (#4480)
https://issues.redhat.com/browse/DROOLS-6987
Automatic updates\nhttps://jenkins.updater.j2eeguys.com/
drools-core/src/main/java/org/drools/core/common/EventFactHandle.java
    Replace the type specification in this constructor call with the diamond operator ("<>"). [squid:S2293]
drools-drl-ast/src/main/java/org/drools/drl/ast/dsl/impl/EntryPointDeclarationDescrBuilderImpl.java
    Replace the type specification in this constructor call with the diamond operator ("<>"). [squid:S2293]
drools-examples/src/main/java/org/drools/examples/buspass/BussPassJTMSExample.java
    Remove this unused import 'org.kie.api.io.ResourceType'. [java:S1128]
    Remove this unused import 'org.kie.internal.io.ResourceFactory'. [java:S1128]
drools-templates/src/main/java/org/drools/template/parser/Row.java
    Replace the type specification in this constructor call with the diamond operator ("<>"). [squid:S2293]
drools-core/src/main/java/org/drools/core/reteoo/ClassObjectTypeConf.java
    Replace the type specification in this constructor call with the diamond operator ("<>"). [squid:S2293]
drools-decisiontables/src/main/java/org/drools/decisiontable/parser/RuleSheetParserUtil.java
    Replace the type specification in this constructor call with the diamond operator ("<>"). [squid:S2293]
kie-pmml-trusty/kie-pmml-compiler/kie-pmml-compiler-commons/src/main/java/org/kie/pmml/compiler/commons/factories/KiePMMLMiningFieldInstanceFactory.java
    Remove this unused import 'org.dmg.pmml.Interval'. [java:S1128]
    Remove this unused import 'java.util.stream.Collectors'. [java:S1128]
    Remove this unused import 'org.kie.pmml.api.enums.CLOSURE'. [java:S1128]
kie-dmn/kie-dmn-signavio/src/main/java/org/kie/dmn/signavio/feel/runtime/functions/SignavioRemoveFunction.java
    Replace the type specification in this constructor call with the diamond operator ("<>"). [squid:S2293]
drools-commands/src/main/java/org/drools/commands/runtime/Bat